# opengl-demo

./: CMakeLists.txt  README.md
include/configure/: root_directory.h  root_directory.h.in
include/graphics/: graphics.h
src/graphics/: background.fs  background.vs  brdf.fs  brdf.vs  cubemap.vs  cubemap_irradiance.fs  cubemap_prefilter.fs  cubemap_radiance.fs  graphics.cc  main.cc  pbr.fs  pbr.vs
