cmake_minimum_required(VERSION 3.0)
project(graphics)

configure_file(${CMAKE_SOURCE_DIR}/include/configure/root_directory.h.in ${CMAKE_SOURCE_DIR}/include/configure/root_directory.h)
include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/include/imgui /usr/local/include)
link_directories(/usr/local/lib)
find_library(opengl OpenGL)
add_library(stb_image "src/stb/stb_image.cc")
file(GLOB imgui "src/imgui/*.cpp")
add_library(imgui ${imgui})
set(lib ${opengl} glfw glew stb_image imgui)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
file(GLOB src "src/graphics/*.cc")
add_executable(${PROJECT_NAME} ${src})
target_link_libraries(${PROJECT_NAME} ${lib})

file(GLOB shader "src/graphics/*vs" "src/graphics/*.gs" "src/graphics/*.fs")
macro(link src dest target)
  add_custom_command(TARGET ${target} POST_BUILD COMMAND ${CMAKE_COMMAND} -E create_symlink ${src} ${dest} DEPENDS ${dest} COMMENT "link ${src} to ${dest}")
endmacro()
foreach(s ${shader})
  get_filename_component(s_name ${s} NAME)
  link(${s} ${CMAKE_SOURCE_DIR}/bin/${s_name} ${PROJECT_NAME})
endforeach(s)